[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awo-observability"
version = "0.1.0"
description = "Lightweight CLI for system/GPU metrics during AI workloads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil",
    "click",
    "matplotlib",
]

[project.scripts]
awo = "awo.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["awo"]

[project.optional-dependencies]
gpu = ["pynvml"]
dev = ["pytest"]